--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block main %}
-  <h1 style="margin: 10px;">Welcome to the Chia Password Coin!</h1>
+  <h1 style="margin: 10px;">Welcome to the Cactus Password Coin!</h1>
 
   {% for balance in balances %}
     <p>
