--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chia Password Coin</title>
+    <title>Cactus Password Coin</title>
 </head>
 <body style="background-color: #00A36C; font-family: Arial">
   <div style="margin:0 auto; width: 100%; max-width: 700px; text-align: center; margin-top: 50px; padding: 30px; background-color: white; border-radius: 10px;">
